Adicionando mais imagens

--- a/projeto-better/index.html
+++ b/projeto-better/index.html
@@ -126,6 +126,24 @@
                     </figcaption>
                 </figure>
             </a>
+
+            <a href="#" class="col-sm-6 col-lg-3 col-lg-3">
+                <figure>
+                    <img class="img-fluid img-thumbnail" src="img/cabra.jpg" alt="Cabra">
+                    <figcaption>
+                        Cabra
+                    </figcaption>
+                </figure>
+            </a>
+
+            <a href="#" class="col-sm-6 col-lg-3 col-lg-3">
+                <figure>
+                    <img class="img-fluid img-thumbnail" src="img/ciclista.jpg" alt="Ciclista">
+                    <figcaption>
+                        Ciclista
+                    </figcaption>
+                </figure>
+            </a>
         </div>
             <main>
             </section>
