--- a/projeto-better/index.html
+++ b/projeto-better/index.html
@@ -151,19 +151,19 @@
         <div class="container">
             <div class="row d-flex align-items-center">
                 <div class="col-lg-6">
-                <h1>
-                    Hall da fama do mês de janeiro
-                </h1>
-                <p>
-                    Por votação do público e número de downloads,
-                    escolhemos todo mês as fotografias mais baixadas
-                    do mês anterior e disponibilizamos de graça.
-                    Quero votar!
-                </p>
+                    <h1>
+                        Hall da fama do mês de janeiro
+                    </h1>
+                    <p>
+                        Por votação do público e número de downloads,
+                        escolhemos todo mês as fotografias mais baixadas
+                        do mês anterior e disponibilizamos de graça.
+                        Quero votar!
+                    </p>
 
-                <button class="bnt btn-lg btn-primary">
-                    Quero votar
-                </button>
+                    <button class="bnt btn-lg btn-primary">
+                        Quero votar
+                    </button>
                 </div>
 
                 <figure class="col-lg-6 mt-4">
@@ -174,6 +174,77 @@
                 </figure>
             </div>
         </div>
+    </section>
+
+    <section class="reviews container pt-5">
+        <h1 class="mb-3">
+            Reviews
+        </h1>
+
+        <div class="row">
+            <div class="media col-md-6">
+                <img src="https://dummyimage.com/64x64/000000/fff" alt="Roberto
+        Ford" class="mr-3">
+
+                <div class="media-body">
+                    <h2 class="h5">
+                        Roberto Ford
+                    </h2>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nes
+                        ciunt, dolore, consequatur? Sint odit ad impedit harum animi! Fac
+                        ilis quibusdam quod velit veniam corporis quasi, quas praesentium
+                        ad accusantium quaerat consequuntur.
+                    </p>
+                </div>
+                <div class="media col-md-6">
+                    <img src="https://dummyimage.com/64x64/000000/fff" alt="Roberto
+                Ford" class="mr-3">
+
+                    <div class="media-body">
+                        <h2 class="h5">
+                            Bernado Love
+                        </h2>
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nes
+                            ciunt, dolore, consequatur? Sint odit ad impedit harum animi! Fac
+                            ilis quibusdam quod velit veniam corporis quasi, quas praesentium
+                            ad accusantium quaerat consequuntur.
+                        </p>
+                    </div>
+
+                    <div class="media col-md-6">
+                        <img src="https://dummyimage.com/64x64/000000/fff" alt="Roberto
+                Ford" class="mr-3">
+
+                        <div class="media-body">
+                            <h2 class="h5">
+                                Arnold Veber
+                            </h2>
+                            <p>
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nes
+                                ciunt, dolore, consequatur? Sint odit ad impedit harum animi! Fac
+                                ilis quibusdam quod velit veniam corporis quasi, quas praesentium
+                                ad accusantium quaerat consequuntur.
+                            </p>
+                        </div>
+                        <div class="media col-md-6">
+                            <img src="https://dummyimage.com/64x64/000000/fff" alt="Roberto
+                            Ford" class="mr-3">
+
+                            <div class="media-body">
+                                <h2 class="h5">
+                                    Antônio Hopinz
+                                </h2>
+                                <p>
+                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nes
+                                    ciunt, dolore, consequatur? Sint odit ad impedit harum animi! Fac
+                                    ilis quibusdam quod velit veniam corporis quasi, quas praesentium
+                                    ad accusantium quaerat consequuntur.
+                                </p>
+                            </div>
+                </div>
+            </div>
     </section>
     <script src="js/jquery.js"></script>
     <script src="js/bootstrap.min.js"></script>
