--- a/projeto-better/index.html
+++ b/projeto-better/index.html
@@ -65,7 +65,7 @@
 
         <div class="row">
 
-            <a href="#" class="col-sm-6 col-lg-3 col-lg-3">
+            <a href="img/girassois.jpg" target="_blank" class="col-sm-6 col-lg-3 col-lg-3">
                 <figure>
                     <img class="img-fluid img-thumbnail" src="img/girassois.jpg" alt="Girassóis no campo">
                     <figcaption>
@@ -74,7 +74,7 @@
                 </figure>
             </a>
 
-            <a href="#" class="col-sm-6 col-lg-3 col-lg-3">
+            <a href="img/garota-silhueta.jpg"  target="_blank" class="col-sm-6 col-lg-3 col-lg-3">
                 <figure>
                     <img class="img-fluid img-thumbnail" src="img/garota-silhueta.jpg" alt="Silhueta garota">
                     <figcaption>
@@ -83,7 +83,7 @@
                 </figure>
             </a>
 
-            <a href="#" class="col-sm-6 col-lg-3 col-lg-3">
+            <a href="img/mesa-designer.jpg"  target="_blank" class="col-sm-6 col-lg-3 col-lg-3">
                 <figure>
                     <img class="img-fluid img-thumbnail" src="img/mesa-designer.jpg" alt="Típica mesa de um desig
                     ner">
@@ -93,16 +93,16 @@
                 </figure>
             </a>
 
-            <a href="#" class="col-sm-6 col-lg-3 col-lg-3">
+            <a href="img/bones-vitrine.jpg"  target="_blank" class="col-sm-6 col-lg-3 col-lg-3">
                 <figure>
-                    <img class="img-fluid img-thumbnail" src="img/girassois.jpg" alt="Girassóis no campo">
+                    <img class="img-fluid img-thumbnail" src="img/bones-vitrine.jpg" alt="Girassóis no campo">
                     <figcaption>
-                        Girassóis
+                        Bones vitrine
                     </figcaption>
                 </figure>
             </a>
 
-            <a href="#" class="col-sm-6 col-lg-3 col-lg-3">
+            <a href="img/pipoca.jpg"  target="_blank" class="col-sm-6 col-lg-3 col-lg-3">
                 <figure>
                     <img class="img-fluid img-thumbnail" src="img/pipoca.jpg" alt="Pipoca">
                     <figcaption>
@@ -111,7 +111,7 @@
                 </figure>
             </a>
 
-            <a href="#" class="col-sm-6 col-lg-3 col-lg-3">
+            <a href="img/garota-feliz.jpg"  target="_blank" class="col-sm-6 col-lg-3 col-lg-3">
                 <figure>
                     <img class="img-fluid img-thumbnail" src="img/garota-feliz.jpg" alt="Mulher feliz">
                     <figcaption>
@@ -120,7 +120,7 @@
                 </figure>
             </a>
 
-            <a href="#" class="col-sm-6 col-lg-3 col-lg-3">
+            <a href="img/sunset.jpg"  target="_blank" class="col-sm-6 col-lg-3 col-lg-3">
                 <figure>
                     <img class="img-fluid img-thumbnail" src="img/sunset.jpg" alt="Pôr do sol">
                     <figcaption>
@@ -129,7 +129,7 @@
                 </figure>
             </a>
 
-            <a href="#" class="col-sm-6 col-lg-3 col-lg-3">
+            <a href="img/cabra.jpg"  target="_blank" class="col-sm-6 col-lg-3 col-lg-3">
                 <figure>
                     <img class="img-fluid img-thumbnail" src="img/cabra.jpg" alt="Cabra">
                     <figcaption>
@@ -138,7 +138,7 @@
                 </figure>
             </a>
 
-            <a href="#" class="col-sm-6 col-lg-3 col-lg-3">
+            <a href="img/ciclista.jpg"  target="_blank" class="col-sm-6 col-lg-3 col-lg-3">
                 <figure>
                     <img class="img-fluid img-thumbnail" src="img/ciclista.jpg" alt="Ciclista">
                     <figcaption>
